syntax = "proto3";
package cards;

message CardRequest {
  string merchantId = 1;
  string customerId = 2;
  string cardNo = 3;
  string cardName = 4;
  optional int32 expMo = 5;
  optional int32 expYr = 6;
}

message CardResponse {
  string cardHash = 1;
  string createdAt = 2;
}

service Card {
  rpc AddCard(CardRequest) returns (CardResponse);
}


